assets/scss/site.scss
/* ... */
.user-type-tech, .user-type-dev {
    color: #c90;
}

.user-type-admin {
    color: #ad4747;
}

.user-type-mod {
    color: #6c8a2d;
}

.comment .actions a + a {
    margin-left: 10px;
}

.comment {
    transition: opacity 0.2s ease;
}

.comment.removing {
    opacity: 0.5;
}

.comment.removing .actions {
    display: none;
}

.comment.submitting {
    opacity: 0.5;
}

.comment.submitting .actions {
    display: none;
}

@media all {
    #detail-comments .comments .comment-form {
        margin-right: 0;
    }
}

.comment .actions .error {
    color: #c00;
}

.comment-form .error {
    background-color: #fba;
    border-top-left-radius: 0.4em;
    border-top-right-radius: 0.4em;
    color: #500;
    font-weight: bold;
    margin: -1.35em;
    margin-bottom: 1.35em;
    padding: 1em;
    text-align: center;
}


/* API Tokens
--------------------------------*/
#api-token-list li {
    margin-bottom: 0.7em;
    position: relative;
}

#api-token-list input {
    position: absolute;
    top: 0.25em;
}

#api-token-list em {
    padding-left: 1.7rem;
}

#api-token-list .api-token {
    margin-left: 1.8rem;
}

/* Tag filters
--------------------------------*/
#tagfilters_content_buttons {
    margin-top: 0.6em;
}

/* Play-from-gallery
--------------------------------*/
.playable-container {
    height: 100%;
    left: 0;
    pointer-events: none;
    position: absolute;
    top: 0;
    width: 100%;
}

.playable-overlay {
    background-color: rgba(0, 0, 0, 0.55);
    border-radius: 100%;
    height: 5em;
    left: 50%;
    margin: -2.5em 0 0 -2.5em;
    overflow: hidden;
    pointer-events: auto;
    position: absolute;
    top: 50%;
    transition: all 0.3s ease;
    width: 5em;
}

.playable-overlay.open {
    border-radius: 0;
    height: 100%;
    left: 0;
    margin: 0;
    top: 0;
    width: 100%;
}

.playable-container.tiny .playable-overlay {
    text-align: center;
}

.playable-toggle {
    background: url('../static/images/play-light.svg') no-repeat center/auto 4.6em;
    border: none;
    height: 5em;
    margin: 0;
    opacity: 0.8;
    outline: none;
    padding: 0;
    transition: margin 0.3s ease;
    width: 5em;
}

.playable-overlay.open .playable-toggle {
    margin-top: 0.6em;
}

.playable-toggle.playing {
    background-image: url('../static/images/pause-light.svg');
}

.playable-time {
    left: 5em;
    position: absolute;
    right: 1.6em;
    top: 2em;
}

.playable-container.tiny .playable-time {
    display: none;
}

.playable-time-text {
    display: block;
}

.playable-container.small .playable-time-total {
    display: none;
}

.playable-time-track {
    background-color: rgba(255, 255, 255, 0.5);
    border-radius: 1px;
    display: block;
    height: 2px;
    overflow: hidden;
}

.playable-time-track > span {
    background-color: white;
    display: block;
    height: 100%;
}

/* Submission favorite button
--------------------------------*/
#submission-favorite-form button.pending {
    background-position: -20px -140px;
    opacity: 0.5;
}

/* Thumbnail stacks
--------------------------------*/
.thumbnail-stack .thumb-bounds {
    max-width: 40%;
    float: left;
    margin-right: 10px;
    position: relative;
}

.thumbnail-stack .thumb-bounds img {
    max-width: 100%;
    vertical-align: top;
}

.thumbnail-stack .rating {
    width: 60px;
    height: 60px;
    border-style: solid;
    border-width: 0 4px 4px 0;
    position: absolute;
    right: -2px;
    bottom: -2px;
    color: transparent;
    overflow: hidden;
    text-indent: 150%;
    z-index: 3;
}

.thumbnail-stack .caption {
    margin-top: 10px;
}

.thumbnail-stack .caption .title {
    font-size: 13px;
}

/* Ads
--------------------------------*/
.ads-multiple {
    padding-top: 2.8em;
    text-align: center;
    word-spacing: 2em;
}

.ad-multiple {
    display: inline-block;
}

@media (max-width: 42em) {
    .ads-multiple * + .ad-multiple {
        display: none;
    }
}

@media (max-width: 66em) {
    #submission-ads .ads-multiple {
        word-spacing: 1em;
    }
}

#ad-list {
    table-layout: auto;
}

#ad-list td {
    vertical-align: middle;
}

